authenticated basic uploader

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,5 +6,11 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "storage": {
+    "amplifyappbucket": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
